Bug 995655 - Fix -Wuninitialized warnings in libmar. r=rstrong